
  Pre-release 0.6.1

  o FEATURE: Quick-save - bound to Ctrl-S.

  o FEATURE: Binary updates (pre-releases) now available. 

  o CHANGE: "Save dialog positions" now also saves the Edit Chi Angles
    dialog position [Markus Rudolph].

  o CHANGE: Coot can now go through proxies (http_proxy environment variable)
    to get News and Updates.

  o CHANGE: Baton manipulation is now possible when the skeleton runs out.

  o BUG-FIX: Check waters by difference map now works again [Misty X].

  o BUG-FIX: SSM alignment crash fixed [Ed Pozharski]

-----

  Release 0.6

  o FEATURE: User-defined clicks [Joel Bard].

  o FEATURE: SHELXL interfaces allows the user to modify the input before
    running the SHELXL executable [Tobias Beck].

  o FEATURE: Now compatible with Zalman M220W.

  o FEATURE: Post-manipulation function hook added [JED].

  o FEATURE: "Sphere" (residue selection) refinement.

  o FEATURE: function to (re-)calculate probe dots around a give point
    [Joel Bard].

  o FEATURE: monomer and residue selection dipoles.

  o FEATURE: Interactive map sharpening [Randy Read, Alex Brunger].

  o FEATURE: LINK bonds are are now represented.

  o FEATURE: "Backrub rotamers" at low (2.7 or worse) resolution.

  o FEATURE: Baton build parameters (e.g. "backwards") now have a GUI 
    [Phil Evans].

  o FEATURE: Move waters to surround protein [Garib Murshudov]

  o FEATURE: rotate/translate zone by residue ranges

  o FEATURE: Rigid-body fit by residue ranges.

  o FEATURE: Multi-select on reading coordinates is enabled.

  o FEATURE: Immediate access to coordinates from CIF dictionaries
    that contain coordinates (no need for LIBCHECK in such cases).

  o FEATURE: Nudge-residue (bound to Ctrl-arrow keys).

  o FEATURE: A dialog has been added from map averaging [Bob Nolte].

  o FEATURE: Rename residue [Alexander Schiffer].

  o CHANGE: partial charges added to electrostatic surface calculation.
